fix: mobile gap

--- a/src/app.css
+++ b/src/app.css
@@ -100,6 +100,9 @@ h3,
 
 html,
 body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
